# dotscope

./: .gitignore  .llvm-cov.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  NOTICE  README.md
dotscope/: Cargo.toml
dotscope-cli/: Cargo.toml  README.md
dotscope-cli/src/: app.rs  main.rs  output.rs
dotscope-cli/src/commands/: attrs.rs  callgraph.rs  cfg.rs  common.rs  deobfuscate.rs  detect.rs  exports.rs  heaps.rs  imports.rs  info.rs  methods.rs  mod.rs  resolution.rs  resources.rs  ssa.rs  tables.rs  types.rs  validate.rs
dotscope-cli/src/commands/disasm/: formatter.rs  mod.rs
dotscope/benches/: assembly.rs  cilassemblyview.rs  cilobject.rs  cor20.rs  method_body.rs  resources.rs  security.rs  signatures.rs  streams.rs
dotscope/examples/: README.md  analysis.rs  basic.rs  comprehensive.rs  decode_blocks.rs  deobfuscate.rs  disassembly.rs  injectcode.rs  lowlevel.rs  metadata.rs  method_analysis.rs  modify.rs  project_loader.rs  raw_assembly_view.rs  types.rs
dotscope/fuzz/: Cargo.toml
dotscope/src/: error.rs  lib.rs  macros.rs  prelude.rs
dotscope/src/analysis/: algebraic.rs  defuse.rs  mod.rs  range.rs  taint.rs
dotscope/src/analysis/callgraph/: graph.rs  mod.rs  node.rs  resolution.rs  site.rs
dotscope/src/analysis/cfg/: analyzer.rs  edge.rs  graph.rs  loops.rs  mod.rs  semantics.rs
dotscope/src/analysis/dataflow/: framework.rs  lattice.rs  liveness.rs  mod.rs  reaching.rs  sccp.rs  solver.rs
dotscope/src/analysis/ssa/: block.rs  builder.rs  cfg.rs  constraints.rs  consts.rs  converter.rs  decompose.rs  evaluator.rs  exception.rs  function.rs  instruction.rs  liveness.rs  memory.rs  mod.rs  ops.rs  patterns.rs  phi.rs  phis.rs  resolver.rs  stack.rs  target.rs  types.rs  value.rs  variable.rs  verifier.rs
dotscope/src/analysis/x86/: cfg.rs  decoder.rs  flags.rs  mod.rs  ssa.rs  types.rs
dotscope/src/assembly/: block.rs  builder.rs  decoder.rs  encoder.rs  instruction.rs  instructions.rs  mod.rs  opcodes.rs
dotscope/src/cilassembly/: mod.rs  modifications.rs
dotscope/src/cilassembly/builders/: class.rs  enums.rs  event.rs  interface.rs  method.rs  method_body.rs  mod.rs  property.rs
dotscope/src/cilassembly/changes/: assembly.rs  changeref.rs  heap.rs  mod.rs
dotscope/src/cilassembly/cleanup/: analysis.rs  compaction.rs  executor.rs  mod.rs  orphans.rs  references.rs  request.rs  stats.rs  utils.rs
dotscope/src/cilassembly/writer/: context.rs  fields.rs  fixups.rs  generator.rs  methods.rs  mod.rs  output.rs  relocations.rs  remapper.rs  signatures.rs  sizes.rs  tables.rs
dotscope/src/compiler/: context.rs  events.rs  host.rs  mod.rs  pass.rs  scheduler.rs  state.rs  summary.rs
dotscope/src/compiler/codegen/: coalescing.rs  mod.rs  tests.rs
dotscope/src/compiler/passes/: algebraic.rs  blockmerge.rs  controlflow.rs  copying.rs  deadcode.rs  gvn.rs  inlining.rs  licm.rs  loopcanon.rs  mod.rs  predicates.rs  proxy.rs  ranges.rs  reassociate.rs  strength.rs  threading.rs  utils.rs
dotscope/src/deobfuscation/: cleanup.rs  config.rs  context.rs  decryptors.rs  detection.rs  detector.rs  engine.rs  findings.rs  mod.rs  processcell.rs  result.rs  statemachine.rs  template.rs  utils.rs  workqueue.rs
dotscope/src/deobfuscation/engine/: analysis.rs  api.rs  codegen.rs  detection.rs  mod.rs  pipeline.rs  tests.rs
dotscope/src/deobfuscation/obfuscators/: mod.rs  registry.rs  utils.rs
dotscope/src/deobfuscation/passes/: antidebug.rs  decryption.rs  delegates.rs  mod.rs  native.rs  neutralize.rs  opaquefields.rs  reflection.rs  staticfields.rs
dotscope/src/deobfuscation/renamer/: cascade.rs  config.rs  context.rs  features.rs  mod.rs  phases.rs  prompt.rs  validate.rs
dotscope/src/deobfuscation/techniques/: assembly.rs  detection.rs  mod.rs  registry.rs  result.rs
dotscope/src/emulation/: fakeobjects.rs  filesystem.rs  mod.rs  tokens.rs
dotscope/src/emulation/capture/: context.rs  mod.rs  types.rs
dotscope/src/emulation/engine/: callresolver.rs  cctors.rs  context.rs  controller.rs  dispatch.rs  error.rs  exceptions.rs  exhandler.rs  generics.rs  mod.rs  pointer.rs  resolution.rs  result.rs  stats.rs  trace.rs
dotscope/src/emulation/exception/: handler.rs  mod.rs  state.rs  types.rs  unwinder.rs
dotscope/src/emulation/loader/: data.rs  mod.rs  peloader.rs
dotscope/src/emulation/memory/: addressspace.rs  arguments.rs  heap.rs  locals.rs  mod.rs  page.rs  region.rs  stack.rs  statics.rs  unmanaged.rs
dotscope/src/emulation/process/: builder.rs  config.rs  execution.rs  mod.rs
dotscope/src/emulation/runtime/: appdomain.rs  mod.rs  native.rs  state.rs
dotscope/src/emulation/thread/: context.rs  mod.rs  scheduler.rs  state.rs  sync.rs
dotscope/src/emulation/tracer/: calltree.rs  event.rs  filter.rs  listener.rs  mod.rs  writer.rs
dotscope/src/emulation/value/: emvalue.rs  ops.rs  symbolic.rs
dotscope/src/file/: mod.rs  parser.rs  pe.rs  repair.rs
dotscope/src/formatting/: assembly.rs  attributes.rs  events.rs  exceptions.rs  fields.rs  generics.rs  helpers.rs  method_body.rs  methods.rs  mod.rs  properties.rs  resources.rs  security.rs  tokens.rs  types.rs  vtfixup.rs
dotscope/src/metadata/: cilassemblyview.rs  cilobject.rs  cor20header.rs  diagnostics.rs  mod.rs  query.rs  resolver.rs  root.rs  sequencepoints.rs  tablefields.rs  token.rs  vtfixup.rs
dotscope/src/project/: context.rs  loader.rs  mod.rs  result.rs
dotscope/src/test/: crafted2.rs  emulation.rs  mod.rs  verification.rs  windowsbase.rs
dotscope/src/test/analysis/: mod.rs  (+4 more)
dotscope/src/utils/: alignment.rs  base64.rs  bitset.rs  crypto.rs  decompress.rs  enums.rs  io.rs  lebytes.rs  math.rs  mod.rs  synchronization.rs  visitedmap.rs
dotscope/tests/: bitmono.rs  confuserex.rs  crafted_1.rs  deobfuscation.rs  dotnet10.rs  fuzzer.rs  jiejie.rs  modify_add.rs  modify_basic.rs  modify_heaps.rs  modify_impexp.rs  modify_roundtrips_crafted2.rs  modify_roundtrips_method.rs  modify_roundtrips_wbdll.rs  mono.rs  netreactor.rs  obfuscar.rs  roundtrip_asm.rs  ssa.rs
dotscope/tests/common/: compatibility.rs  framework.rs  mod.rs  verification.rs
(+1720 files in other folders)
