[workspace]
members = ["dotscope", "dotscope-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BinFlip/dotscope"
homepage = "https://github.com/BinFlip/dotscope"

[profile.bench]
debug = true
lto = "fat"
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
