[package]
name = "dotscope-cli"
version = "0.8.3"
authors = ["Johann Kempter <admin@binflip.rs>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tool for .NET assembly analysis, inspection, and deobfuscation"

[[bin]]
name = "dotscope"
path = "src/main.rs"

[features]
default = []
smart-rename = ["dotscope/smart-rename"]

[dependencies]
dotscope = { path = "../dotscope", features = ["deobfuscation"] }
clap = { version = "4.6.2", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.103"
comfy-table = "7.2.2"
widestring = "1.2.1"
ctrlc = "3.5.2"
env_logger = "0.11.11"
log = "0.4.33"
